更新百度统计代码

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="description" content="开源的Go语言实现的流媒体服务器开发框架" />
     <title>不卡科技</title>
     <script>
-      var _hmt = _hmt || []
-      ;(function () {
-        var hm = document.createElement('script')
-        hm.src = 'https://hm.baidu.com/hm.js?6f9fb3a11639b7e2db0819676f002c55'
-        var s = document.getElementsByTagName('script')[0]
-        s.parentNode.insertBefore(hm, s)
-      })()
-    </script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?efd452b36e0580c8f63085d4c34facc7";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+      </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
